fix re-render too much

--- a/src/app/components/Step2/Step2.module.css
+++ b/src/app/components/Step2/Step2.module.css
@@ -25,6 +25,12 @@
     margin : 10px 15px;
 }
 
+.selected {
+    border-color: #483EFF;
+    background-color: #F8F9FF
+    ;
+}
+
 .image {
     margin : 8px 20px 0 10px;
 }
